Removing most warnings generated by Error Prone